--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node server/index.js" 
+    "start": "node server/index.js"
   },
   "keywords": [],
   "author": "",
@@ -14,6 +14,7 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "sqlite3": "^5.1.7",
-    "stripe": "^18.5.0"
+    "stripe": "^18.5.0",
+    "ws": "^8.18.3"
   }
 }
